# ferrodac-extensions

./: LICENSE  README.md
smoother/: ferrodac-extension.toml  pyproject.toml
smoother/papers/: smoothing.md
smoother/smoother/: __init__.py
smoother/smoother/processors/: smooth.py
smoother/tests/: test_smooth.py
window-integral/: ferrodac-extension.toml  pyproject.toml
window-integral/papers/: integrate.md
window-integral/tests/: test_integrate.py
window-integral/window_integral/: __init__.py
window-integral/window_integral/processors/: integrate.py
