[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smoother"
version = "0.1.0"
description = "ferroDAC extension: moving-average smoothing (trace → trace)"
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["smoother*"]
