# Optional, but recommended: makes the extension a normal Python package so authors
# get tests, type-checking, and editor support. ferroDAC loads it by git-clone+import
# (not pip), so this file is for the AUTHOR's tooling — not required to be loadable.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "window-integral"
version = "0.1.0"
description = "ferroDAC extension: integrate a spectrum over an m/z window"
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["window_integral*"]
